--- a/tutorial/source/workflow.ipynb
+++ b/tutorial/source/workflow.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# High-dimensional Bayesian workflow: autoguides and reparametrizers\n",
+    "# High-dimensional Bayesian workflow, with applications to SARS-CoV-2 lineages\n",
     "\n",
     "This tutorial describes a workflow for incrementally building pipelines to analyze high-dimensional data in Pyro. This workflow has evolved over a few years of applying Pyro to models with $10^5$ or more latent variables. We build on [Gelman et al. (2020)](https://arxiv.org/abs/2011.01808)'s concept of *Bayesian workflow*, and focus on aspects particular to high-dimensional models: approximate inference and numerical stability. While the individual components of the pipeline deserve their own tutorials, this tutorial focuses on incrementally combining those components.\n",
     "\n",
@@ -58,6 +58,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from collections import defaultdict\n",
+    "import functools\n",
+    "import math\n",
     "import os\n",
     "import torch\n",
     "import pyro\n",
@@ -165,7 +168,7 @@
     "    # Model each region as multivariate logistic growth.\n",
     "    rate_scale = pyro.sample(\"rate_scale\", dist.LogNormal(-4, 2))\n",
     "    init_scale = pyro.sample(\"init_scale\", dist.LogNormal(0, 2))\n",
-    "    coef = pyro.sample(\"coef\", dist.Laplace(torch.zeros(M), 0.01).to_event(1))\n",
+    "    coef = pyro.sample(\"coef\", dist.Laplace(torch.zeros(M), 0.1).to_event(1))\n",
     "    with strain_plate:\n",
     "        rate_loc = pyro.deterministic(\"rate_loc\", 0.01 * coef @ features.T)\n",
     "    with place_plate, strain_plate:\n",
@@ -224,9 +227,10 @@
     "    time -= time.mean()\n",
     "\n",
     "    # Model each region as multivariate logistic growth.\n",
+    "    coef_scale = pyro.sample(\"coef_scale\", dist.LogNormal(-4, 2))\n",
     "    rate_scale = pyro.sample(\"rate_scale\", dist.LogNormal(-4, 2))\n",
     "    init_scale = pyro.sample(\"init_scale\", dist.LogNormal(0, 2))\n",
-    "    coef = pyro.sample(\"coef\", dist.Laplace(torch.zeros(M), 0.01).to_event(1))\n",
+    "    coef = pyro.sample(\"coef\", dist.Normal(torch.zeros(M), coef_scale).to_event(1))\n",
     "    with pyro.plate(\"strain\", S, dim=-1):\n",
     "        rate_loc = pyro.deterministic(\"rate_loc\", 0.01 * coef @ features.T)\n",
     "        with pyro.plate(\"place\", P, dim=-2):\n",
@@ -261,7 +265,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def fit_svi(model, guide, lr=0.05, num_steps=1001, log_every=100):\n",
+    "def fit_svi(model, guide, lr=0.1, num_steps=501, log_every=100):\n",
     "    pyro.clear_param_store()\n",
     "    pyro.set_rng_seed(20211205)\n",
     "\n",
@@ -269,9 +273,17 @@
     "    num_latents = sum(\n",
     "        site[\"value\"].numel()\n",
     "        for name, site in poutine.trace(guide).get_trace(dataset).iter_stochastic_nodes()\n",
+    "        if not site[\"infer\"].get(\"is_auxiliary\")\n",
     "    )\n",
     "    num_params = sum(p.unconstrained().numel() for p in pyro.get_param_store().values())\n",
-    "    print(f\"Found has {num_latents} latent variables and {num_params} learnable parameters\")\n",
+    "    print(f\"Found {num_latents} latent variables and {num_params} learnable parameters\")\n",
+    "    \n",
+    "    # Log gradient norms during inference.\n",
+    "    series = defaultdict(list)\n",
+    "    def hook(g, series):\n",
+    "        series.append(torch.linalg.norm(g.reshape(-1), math.inf).item())\n",
+    "    for name, value in pyro.get_param_store().named_parameters():\n",
+    "        value.register_hook(functools.partial(hook, series=series[name]))\n",
     "\n",
     "    # Train the guide.\n",
     "    optim = ClippedAdam({\"lr\": lr, \"lrd\": 0.1 ** (1 / num_steps)})\n",
@@ -285,10 +297,17 @@
     "            print(f\"step {step: >4d} loss = {loss:0.6g}\")\n",
     "\n",
     "    # Plot losses to assess convergence.\n",
-    "    plt.figure(figsize=(6, 2))\n",
-    "    plt.plot(losses)\n",
+    "    plt.figure(figsize=(6, 6))\n",
+    "    for name, Y in series.items():\n",
+    "        plt.plot(Y, lw=1, label=name, alpha=0.5)\n",
+    "    plt.plot(losses, \"k--\", label=\"loss\")\n",
     "    plt.xlabel(\"SVI step\")\n",
-    "    plt.ylabel(\"loss = -ELBO\")"
+    "    plt.ylabel(\"loss  or  gradient norm\")\n",
+    "    plt.yscale(\"log\")\n",
+    "    plt.xscale(\"symlog\")\n",
+    "    plt.xlim(0, None)\n",
+    "    plt.legend(loc=\"best\", fontsize=8)\n",
+    "    plt.tight_layout()"
    ]
   },
   {
@@ -300,6 +319,40 @@
     "%%time\n",
     "guide = AutoNormal(model, init_scale=0.01)\n",
     "fit_svi(model, guide)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After each change to the model or inference, you'll validate model outputs. In our running example we'll visually sanity check a volcano plot that shows the effect size and statistical significance of each mutation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_volcano(guide):\n",
+    "    with torch.no_grad(), poutine.mask(mask=False), pyro.plate(\"particles\", 100, dim=-3):\n",
+    "        coef = poutine.trace(guide).get_trace().nodes[\"coef\"][\"value\"]\n",
+    "    coef = coef.squeeze() * 0.01\n",
+    "    mean = coef.mean(0)\n",
+    "    std = coef.std(0)\n",
+    "    z_score = mean.abs() / std\n",
+    "    plt.figure()\n",
+    "    plt.scatter(mean.exp().numpy(), z_score.numpy(), lw=0, s=5, alpha=0.5, color=\"darkred\")\n",
+    "    plt.yscale(\"symlog\")\n",
+    "    plt.xscale(\"log\")\n",
+    "    plt.ylim(0, None)\n",
+    "    plt.xlabel(\"$R_m/R_{wt}$\")\n",
+    "    plt.ylabel(\"z-score\")\n",
+    "    xticks = [0.8, 0.9, 1.0, 1.1, 1.2]\n",
+    "    plt.xticks(xticks, labels=list(map(str, xticks)))\n",
+    "    plt.title(f\"Volcano plot of {len(mean)} mutations\")\n",
+    "\n",
+    "plot_volcano(guide)"
    ]
   },
   {
@@ -337,7 +390,8 @@
    "source": [
     "%%time\n",
     "guide = AutoNormal(model, init_loc_fn=init_loc_fn, init_scale=0.01)\n",
-    "fit_svi(model, guide)"
+    "fit_svi(model, guide)\n",
+    "plot_volcano(guide)"
    ]
   },
   {
@@ -355,7 +409,7 @@
    "source": [
     "def init_loc_fn(site):\n",
     "    shape = site[\"fn\"].shape()\n",
-    "    if site[\"name\"] in [\"rate_scale\", \"init_scale\"]:\n",
+    "    if site[\"name\"].endswith(\"_scale\"):\n",
     "        return torch.ones(shape)\n",
     "    if site[\"name\"] == \"coef\":\n",
     "        return torch.randn(shape).sub_(0.5).mul(0.01)\n",
@@ -374,7 +428,8 @@
    "source": [
     "%%time\n",
     "guide = AutoNormal(model, init_loc_fn=init_loc_fn, init_scale=0.01)\n",
-    "fit_svi(model, guide)"
+    "fit_svi(model, guide)\n",
+    "plot_volcano(guide)"
    ]
   },
   {
@@ -441,7 +496,8 @@
     "%%time\n",
     "reparam_model = poutine.reparam(model, {\"rate\": LocScaleReparam(), \"init\": LocScaleReparam()})\n",
     "guide = AutoNormal(reparam_model, init_loc_fn=init_loc_fn, init_scale=0.01)\n",
-    "fit_svi(reparam_model, guide)"
+    "fit_svi(reparam_model, guide)\n",
+    "plot_volcano(guide)"
    ]
   },
   {
@@ -478,30 +534,10 @@
    "source": [
     "%%time\n",
     "reparam_model = poutine.reparam(model, {\"rate\": LocScaleReparam(), \"init\": LocScaleReparam()})\n",
-    "guide = AutoLowRankMultivariateNormal(reparam_model, init_loc_fn=init_loc_fn, init_scale=0.01)\n",
-    "fit_svi(reparam_model, guide)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def plot_volcano(guide):\n",
-    "    with torch.no_grad(), poutine.mask(mask=False), pyro.plate(\"particles\", 100, dim=-3):\n",
-    "        coef = poutine.trace(guide).get_trace().nodes[\"coef\"][\"value\"]\n",
-    "    coef = coef.squeeze()\n",
-    "    mean = coef.mean(0)\n",
-    "    std = coef.std(0)\n",
-    "    z_score = mean.abs() / std\n",
-    "    plt.scatter(mean.exp().numpy(), z_score.numpy(), lw=0, s=5, alpha=0.5, color=\"black\")\n",
-    "    plt.yscale(\"symlog\")\n",
-    "    plt.xscale(\"log\")\n",
-    "    plt.ylim(0, None)\n",
-    "    plt.xlabel(\"$R_m/R_{wt}$\")\n",
-    "    plt.ylabel(\"z-score\")\n",
-    "    plt.title(f\"Volcano plot of {len(mean)} mutations\")\n",
+    "guide = AutoLowRankMultivariateNormal(\n",
+    "    reparam_model, init_loc_fn=init_loc_fn, init_scale=0.01, rank=10\n",
+    ")\n",
+    "fit_svi(reparam_model, guide)\n",
     "plot_volcano(guide)"
    ]
   },
