--- a/tutorial/source/workflow.ipynb
+++ b/tutorial/source/workflow.ipynb
@@ -59,6 +59,7 @@
    "outputs": [],
    "source": [
     "from collections import defaultdict\n",
+    "from pprint import pprint\n",
     "import functools\n",
     "import math\n",
     "import os\n",
@@ -216,7 +217,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def model(dataset):\n",
+    "def model(dataset, predict=None):\n",
     "    features = dataset[\"features\"]\n",
     "    counts = dataset[\"counts\"]\n",
     "    sparse_counts = dataset[\"sparse_counts\"]\n",
@@ -236,6 +237,9 @@
     "        with pyro.plate(\"place\", P, dim=-2):\n",
     "            rate = pyro.sample(\"rate\", dist.Normal(rate_loc, rate_scale))\n",
     "            init = pyro.sample(\"init\", dist.Normal(0, init_scale))\n",
+    "    if predict is not None:  # Exit early during evaluation.\n",
+    "        probs = (init + rate * time[predict]).softmax(-1)\n",
+    "        return probs\n",
     "    logits = (init + rate * time[:, None, None]).log_softmax(-1)\n",
     "\n",
     "    # Observe sequences via a cheap sparse multinomial likelihood.\n",
@@ -265,7 +269,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def fit_svi(model, guide, lr=0.1, num_steps=501, log_every=100):\n",
+    "def fit_svi(model, guide, lr=0.1, num_steps=1001, log_every=100):\n",
     "    pyro.clear_param_store()\n",
     "    pyro.set_rng_seed(20211205)\n",
     "\n",
@@ -302,7 +306,7 @@
     "        plt.plot(Y, lw=1, label=name, alpha=0.5)\n",
     "    plt.plot(losses, \"k--\", label=\"loss\")\n",
     "    plt.xlabel(\"SVI step\")\n",
-    "    plt.ylabel(\"loss  or  gradient norm\")\n",
+    "    plt.title(\"loss and gradient norms during training\")\n",
     "    plt.yscale(\"log\")\n",
     "    plt.xscale(\"symlog\")\n",
     "    plt.xlim(0, None)\n",
@@ -325,7 +329,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After each change to the model or inference, you'll validate model outputs. In our running example we'll visually sanity check a volcano plot that shows the effect size and statistical significance of each mutation."
+    "After each change to the model or inference, you'll validate model outputs. In our running example we'll evaluate using the mean average error (MAE) over the last fully-observed time step, and visually sanity check by plotting a volcano plot showing the effect size and statistical significance of each mutation's coefficient."
    ]
   },
   {
@@ -334,21 +338,64 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_volcano(guide):\n",
-    "    with torch.no_grad(), poutine.mask(mask=False), pyro.plate(\"particles\", 100, dim=-3):\n",
-    "        coef = poutine.trace(guide).get_trace().nodes[\"coef\"][\"value\"]\n",
+    "def mae(true_counts, pred_probs):\n",
+    "    \"\"\"Computes mean average error between counts and predicted probabilities.\"\"\"\n",
+    "    pred_counts = pred_probs * true_counts.sum(-1, True)\n",
+    "    error = (true_counts - pred_counts).abs().sum(-1)\n",
+    "    total = true_counts.sum(-1).clamp(min=1)\n",
+    "    return (error / total).mean().item()\n",
+    "\n",
+    "def evaluate(model, guide, num_particles=100, location=\"USA / Massachusetts\", time=-2):\n",
+    "    \"\"\"Evaluate posterior predictive accuracy at the last fully observed time step.\"\"\"\n",
+    "    with torch.no_grad(), poutine.mask(mask=False):  # makes computations cheaper\n",
+    "        with pyro.plate(\"particle\", num_particles, dim=-3):  # vectorizes\n",
+    "            guide_trace = poutine.trace(guide).get_trace(dataset)\n",
+    "            probs = poutine.replay(model, guide_trace)(dataset, predict=time)\n",
+    "        probs = probs.mean(0)          # average over Monte Carlo samples\n",
+    "        true_counts = dataset[\"counts\"][time]\n",
+    "        # Compute global and local KL divergence.\n",
+    "        global_mae = mae(true_counts, probs)\n",
+    "        i = dataset[\"locations\"].index(location)\n",
+    "        local_mae = mae(true_counts[i], probs[i])\n",
+    "        metrics {\"MAE (global)\": global_mae, f\"MAE ({location})\": local_mae}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pprint(evaluate(model, guide))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_volcano(guide, num_particles=100):\n",
+    "    with torch.no_grad(), poutine.mask(mask=False):  # makes computations cheaper\n",
+    "        with pyro.plate(\"particle\", num_particles, dim=-3):  # vectorizes\n",
+    "            trace = poutine.trace(guide).get_trace(dataset)\n",
+    "            trace = poutine.trace(poutine.replay(model, trace)).get_trace(dataset, -1)\n",
+    "            coef = trace.nodes[\"coef\"][\"value\"]\n",
     "    coef = coef.squeeze() * 0.01\n",
     "    mean = coef.mean(0)\n",
     "    std = coef.std(0)\n",
     "    z_score = mean.abs() / std\n",
-    "    plt.figure()\n",
-    "    plt.scatter(mean.exp().numpy(), z_score.numpy(), lw=0, s=5, alpha=0.5, color=\"darkred\")\n",
+    "    effect_size = mean.exp().numpy()\n",
+    "    plt.figure(figsize=(6, 3))\n",
+    "    plt.scatter(effect_size, z_score.numpy(), lw=0, s=5, alpha=0.5, color=\"darkred\")\n",
     "    plt.yscale(\"symlog\")\n",
     "    plt.xscale(\"log\")\n",
     "    plt.ylim(0, None)\n",
     "    plt.xlabel(\"$R_m/R_{wt}$\")\n",
     "    plt.ylabel(\"z-score\")\n",
-    "    xticks = [0.8, 0.9, 1.0, 1.1, 1.2]\n",
+    "    xticks = [0.7, 0.8, 0.9, 1.0, 1.1, 1.2, 1.3]\n",
+    "    i = int((mean / std).max(0).indices)\n",
+    "    plt.text(effect_size[i], z_score[i] * 1.1, dataset[\"mutations\"][i], ha=\"center\", fontsize=8)\n",
     "    plt.xticks(xticks, labels=list(map(str, xticks)))\n",
     "    plt.title(f\"Volcano plot of {len(mean)} mutations\")\n",
     "\n",
@@ -391,6 +438,7 @@
     "%%time\n",
     "guide = AutoNormal(model, init_loc_fn=init_loc_fn, init_scale=0.01)\n",
     "fit_svi(model, guide)\n",
+    "pprint(evaluate(model, guide))\n",
     "plot_volcano(guide)"
    ]
   },
