Raise NotImplementedError in unhandled case of render_model()

--- a/tutorial/source/model_rendering.ipynb
+++ b/tutorial/source/model_rendering.ipynb
@@ -111,7 +111,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Digraph at 0x7f94d8f83358>"
+       "<graphviz.dot.Digraph at 0x7fe25f94ce10>"
       ]
      },
      "execution_count": 3,
@@ -263,7 +263,7 @@
        "<text text-anchor=\"middle\" x=\"142\" y=\"-84.3\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">y</text>\n",
        "</g>\n",
        "<!-- ε&#45;&gt;y -->\n",
-       "<g id=\"edge3\" class=\"edge\">\n",
+       "<g id=\"edge2\" class=\"edge\">\n",
        "<title>ε&#45;&gt;y</title>\n",
        "<path fill=\"none\" stroke=\"#000000\" d=\"M34.8494,-233.6516C25.4263,-210.8095 13.3308,-170.245 31,-142 47.2544,-116.0167 79.9901,-102.2116 105.7196,-95.0872\"/>\n",
        "<polygon fill=\"#000000\" stroke=\"#000000\" points=\"106.7112,-98.4465 115.5405,-92.5904 104.9864,-91.6624 106.7112,-98.4465\"/>\n",
@@ -293,13 +293,13 @@
        "<text text-anchor=\"middle\" x=\"70\" y=\"-156.3\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">c</text>\n",
        "</g>\n",
        "<!-- c&#45;&gt;y -->\n",
-       "<g id=\"edge4\" class=\"edge\">\n",
+       "<g id=\"edge3\" class=\"edge\">\n",
        "<title>c&#45;&gt;y</title>\n",
        "<path fill=\"none\" stroke=\"#000000\" d=\"M85.2693,-144.7307C95.197,-134.803 108.3153,-121.6847 119.4363,-110.5637\"/>\n",
        "<polygon fill=\"#000000\" stroke=\"#000000\" points=\"122.1564,-112.7933 126.7527,-103.2473 117.2067,-107.8436 122.1564,-112.7933\"/>\n",
        "</g>\n",
        "<!-- s&#45;&gt;y -->\n",
-       "<g id=\"edge2\" class=\"edge\">\n",
+       "<g id=\"edge4\" class=\"edge\">\n",
        "<title>s&#45;&gt;y</title>\n",
        "<path fill=\"none\" stroke=\"#000000\" d=\"M142,-141.8314C142,-134.131 142,-124.9743 142,-116.4166\"/>\n",
        "<polygon fill=\"#000000\" stroke=\"#000000\" points=\"145.5001,-116.4132 142,-106.4133 138.5001,-116.4133 145.5001,-116.4132\"/>\n",
@@ -308,7 +308,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Digraph at 0x7f94d8f4cc88>"
+       "<graphviz.dot.Digraph at 0x7fe2641240f0>"
       ]
      },
      "execution_count": 6,
@@ -413,7 +413,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.files.Source at 0x7f94dd7c1b00>"
+       "<graphviz.files.Source at 0x7fe264124a20>"
       ]
      },
      "execution_count": 7,
@@ -497,13 +497,13 @@
        "<text text-anchor=\"middle\" x=\"54\" y=\"-53.3\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">z</text>\n",
        "</g>\n",
        "<!-- x&#45;&gt;z -->\n",
-       "<g id=\"edge3\" class=\"edge\">\n",
+       "<g id=\"edge2\" class=\"edge\">\n",
        "<title>x&#45;&gt;z</title>\n",
        "<path fill=\"none\" stroke=\"#000000\" d=\"M57.2848,-191.5227C59.3883,-179.0726 61.9191,-162.0897 63,-147 64.1432,-131.0409 64.3197,-126.9455 63,-111 62.2945,-102.4753 60.9727,-93.2703 59.5551,-84.917\"/>\n",
        "<polygon fill=\"#000000\" stroke=\"#000000\" points=\"62.9689,-84.1258 57.7474,-74.9069 56.0803,-85.3698 62.9689,-84.1258\"/>\n",
        "</g>\n",
        "<!-- y&#45;&gt;z -->\n",
-       "<g id=\"edge2\" class=\"edge\">\n",
+       "<g id=\"edge3\" class=\"edge\">\n",
        "<title>y&#45;&gt;z</title>\n",
        "<path fill=\"none\" stroke=\"#000000\" d=\"M33.6742,-111.2022C36.7476,-103.0064 40.4616,-93.1024 43.8695,-84.0145\"/>\n",
        "<polygon fill=\"#000000\" stroke=\"#000000\" points=\"47.1685,-85.1853 47.4026,-74.593 40.6142,-82.7274 47.1685,-85.1853\"/>\n",
@@ -519,7 +519,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Digraph at 0x7f94dd7c1a58>"
+       "<graphviz.dot.Digraph at 0x7fe264124978>"
       ]
      },
      "execution_count": 9,
@@ -530,6 +530,41 @@
    "source": [
     "data = torch.ones(10)\n",
     "pyro.render_model(model, model_args=(data,), render_distributions=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Help make Pyro better\n",
+    "\n",
+    "`pyro.render_model()` does not yet support rendering of models with overlapping, non-nested plates. To help implement this see https://github.com/pyro-ppl/pyro/issues/2980"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def model():\n",
+    "    plate1 = pyro.plate(\"plate1\", 2, dim=-2)\n",
+    "    plate2 = pyro.plate(\"plate2\", 3, dim=-1)\n",
+    "    with plate1:\n",
+    "        x = pyro.sample(\"x\", dist.Normal(0, 1))\n",
+    "    with plate1, plate2:\n",
+    "        y = pyro.sample(\"y\", dist.Normal(x, 1))\n",
+    "    with plate2:\n",
+    "        pyro.sample(\"z\", dist.Normal(y.sum(-2, True), 0), obs=torch.zeros(3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```python\n",
+    "pyro.render_model(model)  # not implemented\n",
+    "```"
    ]
   },
   {
