--- a/tutorial/source/logistic-growth.ipynb
+++ b/tutorial/source/logistic-growth.ipynb
@@ -338,8 +338,8 @@
     "    # Assume lineages grow linearly in logit space\n",
     "    logits = init + rate * time[:, None]\n",
     "    \n",
-    "    # We use the softmax function (the multivariate generalization of the logit function)\n",
-    "    # to define normalized probabilities from the logits\n",
+    "    # We use the softmax function (the multivariate generalization of the \n",
+    "    # sigmoid function) to define normalized probabilities from the logits\n",
     "    probs = torch.softmax(logits, dim=-1)\n",
     "    assert probs.shape == (T, L)\n",
     "    \n",
@@ -609,7 +609,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Model each region as multivariate logistic growth\n",
+    "# Model lineage proportions in each region as multivariate logistic growth\n",
     "def regional_model(counts):\n",
     "    T, R, L = counts.shape\n",
     "        \n",
