--- a/tutorial/source/logistic-growth.ipynb
+++ b/tutorial/source/logistic-growth.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Logistic growth models of SARS-CoV-2 strain ratios\n",
+    "# Logistic growth models of SARS-CoV-2 lineage proportions\n",
     "\n",
-    "This notebook explores multivariate logistic growth models, with applications to determining the relative proportions of SARS-CoV-2 strains over time.\n",
+    "This notebook explores multivariate logistic growth models, with the goal of inferring the differential growth rates of different SARS-CoV-2 lineages over time.\n",
     "\n",
     "**WARNING**: The purpose of this tutorial is to demonstrate Pyro's modeling and inference syntax. \n",
     "Making reliable inferences about SARS-CoV-2 **is not** the purpose of this tutorial.\n",
@@ -16,8 +16,8 @@
     "* [Overview](#Overview)\n",
     "* [Loading data](#Loading-data)\n",
     "* [A First Model](#A-first-model)\n",
-    "* [Defining a regional model](#Defining-a-regional-model)\n",
-    "* [Defining an alternative regional model](#Defining-an-alternative-regional-model)"
+    "* [A regional model](#A-regional-model)\n",
+    "* [An alternative regional model](#An-alternative-regional-model)"
    ]
   },
   {
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,6 @@
     "\n",
     "import pyro\n",
     "import pyro.distributions as dist\n",
-    "from pyro.distributions import constraints\n",
     "from pyro.infer import SVI, Trace_ELBO\n",
     "from pyro.infer.autoguide import AutoNormal\n",
     "from pyro.optim import ClippedAdam\n",
@@ -81,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -122,16 +121,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The main two pieces of data are a counts tensor and a feature matrix. The `dataset[\"counts\"]` tensor has shape (T, R, L) where `T` is the number of time bins, `R` is the number of regions, and `L` is the number of strains or PANGO lineages, and `dataset[\"counts\"][t,r,l]` is the number of samples in the corresponding time-region-location bin.\n",
-    "\n",
-    "The `dataset[\"features\"]` matrix (not used in this tutorial) has shape (L, M) where `L` is the number of strains or PANGO lineages, and `M` is the number of mutations, and `dataset[\"features\"][l,m]` is the portion of samples classified as lineage `l` that exhibit mutation `m` (note this is not quite binary, because each lineage is heterogeneous).\n",
-    "\n",
+    "In this tutorial our interest is in the 3-dimensional tensor\n",
+    "of counts `dataset[\"counts\"]`, which has shape (T, R, L) where `T` is the number of time bins, `R` is the number of regions, and `L` is the number of strains or PANGO lineages, and `dataset[\"counts\"][t,r,l]` is the number of samples in the corresponding time-region-location bin.\n",
     "The count data are heavily skewed towards a few large regions and dominant lineages like `B.1.1.7` and `B.1.617.2`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +285,7 @@
     }
    ],
    "source": [
-    "# We skip the first year or so of the pandemic where Alpha and Delta are not present\n",
+    "# We skip the first year or so of the pandemic when Alpha and Delta are not present\n",
     "total_counts = alpha_counts + delta_counts\n",
     "start_time = 13\n",
     "total_counts = total_counts[start_time:]\n",
@@ -316,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -415,10 +412,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Digraph at 0x7f8a45e04250>"
+       "<graphviz.dot.Digraph at 0x7fcf5c8e1460>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +489,9 @@
       "step  750 loss = 524.81\n",
       "step 1000 loss = 304.319\n",
       "step 1250 loss = 278.005\n",
-      "step 1500 loss = 261.731\n"
+      "step 1500 loss = 261.731\n",
+      "CPU times: user 4.07 s, sys: 14.6 ms, total: 4.08 s\n",
+      "Wall time: 4.08 s\n"
      ]
     },
     {
@@ -509,6 +508,7 @@
     }
    ],
    "source": [
+    "%%time\n",
     "# We truncate the data to the period with non-zero counts\n",
     "guide = fit_svi(partial(basic_model, alpha_delta_counts[13:]), num_steps=1501)"
    ]
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -577,12 +577,12 @@
    "source": [
     "## Defining a regional model\n",
     "\n",
-    "Instead of focusing on northeastern US states we now consider the entire global dataset."
+    "Instead of focusing on northeastern US states we now consider the entire global dataset and do not aggregate across regions."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +664,9 @@
       "step 2250 loss = 217622\n",
       "step 2500 loss = 204381\n",
       "step 2750 loss = 176877\n",
-      "step 3000 loss = 152123\n"
+      "step 3000 loss = 152123\n",
+      "CPU times: user 16.5 s, sys: 718 ms, total: 17.3 s\n",
+      "Wall time: 16.2 s\n"
      ]
     },
     {
@@ -681,12 +683,13 @@
     }
    ],
    "source": [
+    "%%time\n",
     "guide = fit_svi(partial(regional_model, counts), num_steps=3001)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -713,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -756,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -775,7 +778,9 @@
       "step 2250 loss = 334707\n",
       "step 2500 loss = 300050\n",
       "step 2750 loss = 280347\n",
-      "step 3000 loss = 261445\n"
+      "step 3000 loss = 261445\n",
+      "CPU times: user 23.1 s, sys: 725 ms, total: 23.9 s\n",
+      "Wall time: 22.8 s\n"
      ]
     },
     {
@@ -792,12 +797,13 @@
     }
    ],
    "source": [
+    "%%time\n",
     "guide = fit_svi(partial(regional_model2, counts), num_steps=3001)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
