Address review comments; resurrect render_model()

--- a/tutorial/source/logistic-growth.ipynb
+++ b/tutorial/source/logistic-growth.ipynb
@@ -1083,7 +1083,7 @@
    "source": [
     "## Generalizations <a name=\"Generalizations\" />\n",
     "\n",
-    "So far we've seen how to model two variants at a time either globally or split across multiple regions, and how to use [pyro.plate]() to model multiple variants or regions or times.\n",
+    "So far we've seen how to model two variants at a time either globally or split across multiple regions, and how to use [pyro.plate](https://docs.pyro.ai/en/stable/primitives.html#pyro.primitives.plate) to model multiple variants or regions or times.\n",
     "\n",
     "What other models can you think of that might make epidemiological sense? Here are some ideas:\n",
     "\n",
