update mle map tutorial

--- a/tutorial/source/mle_map.ipynb
+++ b/tutorial/source/mle_map.ipynb
@@ -62,12 +62,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train(model, guide, lr=0.01):\n",
+    "def train(model, guide, lr=0.005, n_steps=201):\n",
     "    pyro.clear_param_store()\n",
     "    adam = pyro.optim.Adam({\"lr\": lr})\n",
     "    svi = SVI(model, guide, adam, loss=Trace_ELBO())\n",
     "\n",
-    "    n_steps = 101\n",
     "    for step in range(n_steps):\n",
     "        loss = svi.step(data)\n",
     "        if step % 50 == 0:\n",
@@ -138,8 +137,10 @@
      "output_type": "stream",
      "text": [
       "[iter 0]  loss: 6.9315\n",
-      "[iter 50]  loss: 6.7310\n",
-      "[iter 100]  loss: 6.7301\n"
+      "[iter 50]  loss: 6.7693\n",
+      "[iter 100]  loss: 6.7333\n",
+      "[iter 150]  loss: 6.7302\n",
+      "[iter 200]  loss: 6.7301\n"
      ]
     }
    ],
@@ -156,7 +157,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Our MLE estimate of the latent fairness is 0.601\n"
+      "Our MLE estimate of the latent fairness is 0.600\n"
      ]
     }
    ],
@@ -222,8 +223,10 @@
      "output_type": "stream",
      "text": [
       "[iter 0]  loss: 5.6719\n",
-      "[iter 50]  loss: 5.6006\n",
-      "[iter 100]  loss: 5.6004\n"
+      "[iter 50]  loss: 5.6007\n",
+      "[iter 100]  loss: 5.6004\n",
+      "[iter 150]  loss: 5.6004\n",
+      "[iter 200]  loss: 5.6004\n"
      ]
     }
    ],
@@ -255,6 +258,98 @@
    "source": [
     "To understand what's going on note that the prior mean of the `latent_fairness` in our model is 0.5, since that is the mean of `Beta(10.0, 10.0)`. The MLE estimate (which ignores the prior) gives us a result that is entirely determined by the raw counts (6 heads and 4 tails, say). In contrast the MAP estimate is regularized towards the prior mean, which is why the MAP estimate is somewhere between 0.5 and 0.6."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Doing the same thing with AutoGuides\n",
+    "\n",
+    "In the above we defined guides by hand. \n",
+    "It's often much easier to rely on Pyro's [AutoGuide machinery](https://docs.pyro.ai/en/stable/infer.autoguide.html?highlight=autoguide). \n",
+    "Let's see how we can do MLE and MAP inference using AutoGuides.\n",
+    "\n",
+    "To do MLE estimation we first use [`mask(False)`](https://docs.pyro.ai/en/stable/poutine.html?highlight=mask#pyro.poutine.handlers.mask) to instruct Pyro to ignore the `log_prob` of the latent variable `latent_fairness` in the model. \n",
+    "(Note we need to do this for every latent variable.)\n",
+    "This way the only non-zero `log_prob` in the model will be from the Bernoulli likelihood and ELBO maximization will be equivalent to likelihood maximization."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def masked_model(data):\n",
+    "    f = pyro.sample(\"latent_fairness\", \n",
+    "                    dist.Beta(10.0, 10.0).mask(False))\n",
+    "    with pyro.plate(\"data\", data.size(0)):\n",
+    "        pyro.sample(\"obs\", dist.Bernoulli(f), obs=data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next we define an [`AutoDelta`](https://docs.pyro.ai/en/stable/infer.autoguide.html?highlight=autodelta#autodelta) guide, which learns a point estimate for each latent variable (i.e. we do not learn any uncertainty):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[iter 0]  loss: 6.8326\n",
+      "[iter 50]  loss: 6.7373\n",
+      "[iter 100]  loss: 6.7301\n",
+      "[iter 150]  loss: 6.7301\n",
+      "[iter 200]  loss: 6.7301\n",
+      "Our MLE estimate of the latent fairness is 0.600\n"
+     ]
+    }
+   ],
+   "source": [
+    "autoguide_mle = pyro.infer.autoguide.AutoDelta(masked_model)\n",
+    "train(masked_model, autoguide_mle)\n",
+    "print(\"Our MLE estimate of the latent fairness is {:.3f}\".format(\n",
+    "      autoguide_mle.median(data)[\"latent_fairness\"].item()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To do MAP inference we again use an `AutoDelta` guide but this time on the original model in which `latent_fairness` is a latent variable:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[iter 0]  loss: 5.6073\n",
+      "[iter 50]  loss: 5.6004\n",
+      "[iter 100]  loss: 5.6004\n",
+      "[iter 150]  loss: 5.6004\n",
+      "[iter 200]  loss: 5.6004\n",
+      "Our MAP estimate of the latent fairness is 0.536\n"
+     ]
+    }
+   ],
+   "source": [
+    "autoguide_map = pyro.infer.autoguide.AutoDelta(original_model)\n",
+    "train(original_model, autoguide_map)\n",
+    "print(\"Our MAP estimate of the latent fairness is {:.3f}\".format(\n",
+    "      autoguide_map.median(data)[\"latent_fairness\"].item()))"
+   ]
   }
  ],
  "metadata": {
@@ -273,7 +368,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
