--- a/tutorial/source/logistic-growth.ipynb
+++ b/tutorial/source/logistic-growth.ipynb
@@ -1091,7 +1091,7 @@
     "- What variables should be shared across lineages, across regions, or over time?\n",
     "- How might you deal with changes of behavior over time, e.g. pandemic waves or vaccination?\n",
     "\n",
-    "For an example of a larger Pyro model using SARS-CoV-2 lineage data like this, see our paper \"Analysis of 2.1 million SARS-CoV-2 genomes identifies mutations associated with transmissibility\" ([preprint](https://www.medrxiv.org/content/10.1101/2021.09.07.21263228v1) | [code](https://github.com/broadinstitute/pyro-cov))."
+    "For an example of a larger Pyro model using SARS-CoV-2 lineage data like this, see our paper \"Analysis of 2.1 million SARS-CoV-2 genomes identifies mutations associated with transmissibility\" ([preprint](https://www.medrxiv.org/content/10.1101/2021.09.07.21263228v1) | [code](https://github.com/broadinstitute/pyro-cov)), and also the [Bayesian workflow tutuorial](workflow.html) using a slightly smaller dataset."
    ]
   },
   {
