--- a/tutorial/source/new_intro.ipynb
+++ b/tutorial/source/new_intro.ipynb
@@ -87,6 +87,9 @@
    },
    "outputs": [],
    "source": [
+    "smoke_test = ('CI' in os.environ)\n",
+    "assert pyro.__version__.startswith('1.7.0')\n",
+    "\n",
     "pyro.enable_validation(True)\n",
     "pyro.set_rng_seed(1)\n",
     "logging.basicConfig(format='%(message)s', level=logging.INFO)\n",
@@ -1038,8 +1041,7 @@
    ],
    "source": [
     "pyro.clear_param_store()\n",
-    "num_iters = 20000\n",
-    "for i in range(num_iters):\n",
+    "for i in range(20000 if not smoke_test else 2):\n",
     "    elbo = svi.step(is_cont_africa, ruggedness, log_gdp)\n",
     "    if i % 500 == 0:\n",
     "        logging.info(\"Elbo loss: {}\".format(elbo))"
@@ -1491,7 +1493,7 @@
     "                     pyro.infer.Trace_ELBO())\n",
     "\n",
     "pyro.clear_param_store()\n",
-    "for i in range(num_iters):\n",
+    "for i in range(20000 if not smoke_test else 2):\n",
     "    elbo = svi.step(is_cont_africa, ruggedness, log_gdp)\n",
     "    if i % 500 == 0:\n",
     "        logging.info(\"Elbo loss: {}\".format(elbo))\n",
