Fix stale version

--- a/tutorial/source/model_rendering.ipynb
+++ b/tutorial/source/model_rendering.ipynb
@@ -22,7 +22,7 @@
     "import pyro.distributions as dist\n",
     "\n",
     "smoke_test = ('CI' in os.environ)\n",
-    "assert pyro.__version__.startswith(\"1.7.0\")"
+    "assert pyro.__version__.startswith('1.8.0')"
    ]
   },
   {
